// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox basic renders checked checkbox 1`] = `
<label
  className="checkbox-container"
  htmlFor="hello"
>
  <span
    aria-checked={true}
    aria-label="checkbox"
    className="checkbox"
    data-swarm-checkbox-field="checked"
    onKeyPress={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <Icon
      color="#ffffff"
      shape="check"
    />
  </span>
  <input
    checked={true}
    id="hello"
    name="greeting"
    onChange={[Function]}
    type="checkbox"
    value="hello"
  />
  <span>
    Hello!
  </span>
</label>
`;

exports[`Checkbox basic renders unchecked checkbox 1`] = `
<label
  className="checkbox-container"
  htmlFor="hello"
>
  <span
    aria-checked={false}
    aria-label="checkbox"
    className="checkbox"
    onKeyPress={[Function]}
    role="checkbox"
    tabIndex={0}
  />
  <input
    checked={false}
    id="hello"
    name="greeting"
    onChange={[Function]}
    type="checkbox"
    value="hello"
  />
  <span>
    Hello!
  </span>
</label>
`;
